fixed poll dimensions on mobile

--- a/src/Board.module.css
+++ b/src/Board.module.css
@@ -11,3 +11,9 @@
         margin-top: 0;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .layout {
+        flex-wrap: nowrap;
+    }
+}
